<resources>
    <string name="app_name">Geo Attendance</string>
    <string name="geo_attendance">Geo Attendance</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo_image">Logo Image</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">VERIFY</string>
    <string name="mpin_message">Enter 6 digit MPin received to your registered Mobile Number.</string>
    <string name="default_day">March 05 2020 Thursday</string>
    <string name="address_string">Appasaheb Kadadi Nagar, Front of sanchar Press, Hotgi Road, Solapur, Maharashtra</string>
    <string name="latlang">17.644507, 75.914034</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="default_time">05:30 PM</string>
    <string name="clock_out">Clock OUT</string>
    <string name="intime">07h:35m</string>
    <string name="leave_management">Leave Management</string>
    <string name="company">Developed by Cemaccy Technologies Pvt. Ltd.</string>
    <string name="login_successful">Login Successful</string>
    <string name="leave_date">Leave Date : </string>
    <string name="leave_type">Leave Type : </string>
    <string name="leave_reason">Reason : </string>
    <string name="sample_date">01/02/2020 - 05/02/2020</string>
    <string name="sample_singledate">01/02/2020</string>
    <string name="sample_type">Sick Leave</string>
    <string name="lorem">lorem ipsum dolor sit amet , consectetur adipisicing elit, sed do eiusmod tempor incididunt</string>
    <string name="leave_status">Pending</string>
    <string name="leave_approved">Approved</string>
    <string name="leave_rejected">Rejected</string>
    <string name="leave_history">Leave Histoy</string>
    <string name="select_date">Select two dates to view your attendance</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="view_report">View Report</string>
    <string name="attendance_date">Attendance Date : </string>
    <string name="sample_time">10 : 00 / 19 : 00 P</string>
    <string name="inouttime">"IN / OUT Time : "</string>
    <string name="iotime">"IN / OUT Time"</string>
    <string name="location">Latitude , Longitude : </string>
    <string name="locality">"Locality : "</string>
    <string name="google_maps_key">AIzaSyCT6mlqkS_0GxjNtqZqnyIW2gJeLJYOriU</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Date</string>
    <string name="punches">Punches</string>
    <string name="whours">W. Hrs</string>
    <string name="remark">Remark</string>
    <string name="map">Map</string>
    <string name="showing_attendance_for_below_dates">Showing Attendance for below dates</string>
    <string name="salary_report">Salary Report</string>
    <string name="per_day_salary">Per Day Salary</string>
    <string name="zero">Rs. 000</string>
    <string name="deduction">Deduction</string>
    <string name="earnings">Earnings</string>
</resources>
