<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/leavedate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/leave_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_leavedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/leavedate"
            android:fontFamily="@font/montserrat"
            android:text="@string/sample_date" />

        <TextView
            android:id="@+id/leavetype"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leavedate"
            android:fontFamily="@font/montserrat"
            android:text="@string/leave_type"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_leavetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_leavedate"
            android:layout_toEndOf="@+id/leavetype"
            android:fontFamily="@font/montserrat"
            android:text="@string/sample_type" />

        <TextView
            android:id="@+id/leavereason"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leavetype"
            android:fontFamily="@font/montserrat"
            android:text="@string/leave_reason"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_leavereason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leavereason"
            android:fontFamily="@font/montserrat"
            android:paddingTop="4dp"
            android:text="@string/lorem" />

        <TextView
            android:id="@+id/tv_leavestatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_leavereason"
            android:layout_marginTop="4dp"
            android:background="@color/statusrejected"
            android:fontFamily="@font/montserrat"
            android:padding="4dp"
            android:text="@string/leave_status"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>