<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AttendanceReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF62B1"
        android:theme="@style/ToolbarTheme"
        app:title="@string/attendance_report"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="16dp"
        android:text="@string/select_date"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/ed_atfromdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false"
            android:fontFamily="@font/montserrat"
            android:hint="@string/from_date" />

        <EditText
            android:id="@+id/ed_attodate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false"
            android:fontFamily="@font/montserrat"
            android:hint="@string/to_date" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_viewattendancereport"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:fontFamily="@font/montserrat"
        android:padding="16dp"
        android:text="@string/view_report" />
</LinearLayout>