<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.IndividualAttendanceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF62B1"
        android:theme="@style/ToolbarTheme"
        app:title="@string/attendance_report"
        app:titleTextColor="@color/white" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/work" />

        <TextView
            android:id="@+id/tv_attendancedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/attendance_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_attendancedate"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/sample_singledate" />

        <TextView
            android:id="@+id/tv_inouttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_date"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/inouttime"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_inouttime"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/sample_time" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_time"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/location"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_latlong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_location"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/latlang" />

        <TextView
            android:id="@+id/tv_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_latlong"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/locality"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_localityname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_locality"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_profile"
            android:fontFamily="@font/montserrat"
            android:text="@string/address_string" />


    </RelativeLayout>
</LinearLayout>