<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AttendanceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF62B1"
        android:theme="@style/ToolbarTheme"
        app:title="@string/attendance_report"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="4dp"
        android:text="@string/showing_attendance_for_below_dates"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="4dp"
        android:text="01/02/2020 To 29/02/2020"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/rv_attendancereport"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" />-->

<!--    <HorizontalScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="8dp">-->

            <TableLayout
                android:stretchColumns="6"
                android:id="@+id/tbl_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/tableborder">

                <TableRow android:background="@drawable/tableborder">

                    <TextView
                        android:layout_margin="8dp"
                        android:drawableRight="@drawable/tableborder"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/date"

                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/iotime"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/punches"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/whours"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/remark"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_margin="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/map"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp" />
                </TableRow>
            </TableLayout>
<!--        </RelativeLayout>-->
<!--    </HorizontalScrollView>-->


</LinearLayout>