<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SalaryReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF62B1"
        android:theme="@style/ToolbarTheme"
        app:title="@string/salary_report"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="Your Salary for the Month : " />

        <Spinner
            android:id="@+id/sp_salarymonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:hint="Leave Type"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/per_day_salary" />

        <TextView
            android:id="@+id/tv_perdaysalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/zero" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tbl_salaryreport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="@drawable/tableborder"
        android:stretchColumns="4">

        <TableRow android:background="@drawable/tableborder">

            <TextView
                android:layout_margin="8dp"
                android:drawableRight="@drawable/tableborder"
                android:fontFamily="@font/montserrat"
                android:text="@string/date"

                android:textAlignment="center"
                android:textColor="@color/black"
                 />

            <TextView
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/whours"
                android:textAlignment="center"
                android:textColor="@color/black"
                 />

            <TextView
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/deduction"
                android:textAlignment="center"
                android:textColor="@color/black"
                 />

            <TextView
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/earnings"
                android:textAlignment="center"
                android:textColor="@color/black"
                 />
        </TableRow>
    </TableLayout>
</LinearLayout>