<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/geo_attendance"
        android:textAlignment="center"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_screentitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_screentitle"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/ed_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_mobile"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/montserrat"
            android:padding="16dp"
            android:text="@string/company"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</RelativeLayout>

