<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/geo_attendance"
        android:textAlignment="center"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tv_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat"
        android:text="Verify mPIN"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_verify"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/mpin_message"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat"
            android:hint="Enter mPIN*"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_verifympin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_mpin"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/montserrat"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer">

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:text="@string/company"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>
